Fix header covering media kit

--- a/css/style.css
+++ b/css/style.css
@@ -345,6 +345,10 @@ div>p {
     header {
         height: 10vh;
     }
+    .big{
+        margin-top: 10vh;
+        ;
+    }
     .intro {
         background: none;
         background-color: rgba(255, 0, 217, 0.673);
